# file-splitter

./: CMakeLists.txt  README.md  merger.cpp  splitter.cpp
